Backend/FintrackerGateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatewayservice
spec:
  selector:
    app: ecommerce
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
